# taskmaster

./: .gitignore  CMakeLists.txt  author  install.sh  run_taskmasterctl.sh  run_taskmasterd.sh  taskmaster-config.yml
libsocket/: CMakeLists.txt
libsocket/includes/: ft_socket.h
libsocket/sources/: decode_message.c  encode_message.c
taskmasterctl/: CMakeLists.txt  CMakeLists.txt.old
taskmasterctl/includes/: client.h
taskmasterctl/libft/: CMakeLists.txt
taskmasterctl/libft/includes/: defs.h  ft_printf.h  ft_qsort.h  libft.h
taskmasterctl/libft/sources/: ft_arr_str_qsort.c  ft_qsort.c
taskmasterctl/libft/sources/ft_printf/: handle_float.c
taskmasterctl/libft/sources/memory/: ft_free_double_ptr_arr.c
taskmasterctl/libft/sources/output/: ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putendl_nb.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_bf.c  ft_putstr_fd.c  ft_putstr_nb.c
taskmasterctl/libft/sources/string/: ft_atoi.c  ft_atoi_octal.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_llitoa.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strcstr.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strmap.c  ft_strmapi.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strndup.c  ft_strnequ.c  ft_strnew.c  ft_strnstr.c  ft_strrchr.c  ft_strsplit.c  ft_strstr.c  ft_strsub.c  ft_strtrim.c  ft_tolower.c  ft_toupper.c
taskmasterctl/libft/sources/xfuncs/: ft_xstrjoin.c  xmalloc.c
taskmasterctl/libreadline/: CMakeLists.txt
taskmasterctl/libreadline/includes/: bindings.h  ft_errno.h  ft_readline.h  history.h  line.h  loginfo.h
taskmasterctl/libreadline/sources/: ft_errno.c  ft_readline.c  main_readline.c
taskmasterctl/libreadline/sources/bindings/: bind_keys.c  ft_bind.c
taskmasterctl/sources/: free_all_str_list.c  free_one_str_list.c  init_str_list.c  is_builtin.c  lexer.c  main.c  make_str.c  print_error.c  send_package.c  shell_clear.c  shell_init.c
taskmasterctl/sources/action_processing/: call_exec.c  ft_exit.c  ft_help.c  print_response_status.c
taskmasterctl/sources/action_processing/help/: print_action_exit_help.c  print_action_help.c  print_action_reload_help.c  print_action_restart_help.c  print_action_shutdown_help.c  print_action_start_help.c  print_action_status_help.c  print_action_stop_help.c
taskmasterd/: CMakeLists.txt
taskmasterd/include/: Jobs.h  JobsManager.h  Logger.h  Server.h  taskmaster.h
taskmasterd/src/: Jobs.cpp  JobsManager.cpp  Logger.cpp  Server.cpp  main.cpp
test/: 0.yml  10.yml  11.yml  12.yml  13.yml  14.yml  15.yml  16.yml  17.yml  18.yml  19.yml  2.yml  20.yml  3.yml  4.yml  5.yml  6.yml  7.yml  8.yml  9.yml  enable_test.sh  example.yml  example3.yml  sleep_ignore_term  sleep_ignore_term.c  taskmaster-config.yml  test.yml
