cmake_minimum_required(VERSION 3.1)
project(ft)

set(CMAKE_C_STANDARD 11)

include_directories(includes)

file(GLOB LIBFT_HEADERS
        includes/defs.h
        includes/ft_printf.h
        includes/ft_qsort.h
        includes/ft_string.h
        includes/ft_vector.h
        includes/get_next_line.h
        includes/libft.h
        includes/xfuncs.h
        )

file(GLOB LIBFT_SRCS
        sources/dlist/ft_dlstadd.c
        sources/dlist/ft_dlstaddback.c
        sources/dlist/ft_dlstdel.c
        sources/dlist/ft_dlstdelend.c
        sources/dlist/ft_dlstdelfront.c
        sources/dlist/ft_dlstdelone.c
        sources/dlist/ft_dlstiter.c
        sources/dlist/ft_dlstnew.c
        sources/dlist/ft_dlstsize.c
        sources/ft_printf/convert_float.c
        sources/ft_printf/convert_integer.c
        sources/ft_printf/ft_fdprintf.c
        sources/ft_printf/ft_printf.c
        sources/ft_printf/ft_vfdprintf.c
        sources/ft_printf/ft_vprintf.c
        sources/ft_printf/get_color.c
        sources/ft_printf/get_conversion.c
        sources/ft_printf/get_flags.c
        sources/ft_printf/get_length.c
        sources/ft_printf/get_precision.c
        sources/ft_printf/get_width.c
        sources/ft_printf/handle_char.c
        sources/ft_printf/handle_color.c
        sources/ft_printf/handle_conversion.c
        sources/ft_printf/handle_float.c
        sources/ft_printf/handle_integer.c
        sources/ft_printf/handle_string.c
        sources/ft_printf/handle_unknown.c
        sources/ft_printf/handle_wchar.c
        sources/ft_printf/handle_wstring.c
        sources/ft_printf/number_to_string.c
        sources/ft_printf/number_to_string_e.c
        sources/ft_printf/number_to_string_f.c
        sources/ft_string/str_addback.c
        sources/ft_string/str_addfront.c
        sources/ft_string/str_compare.c
        sources/ft_string/str_copy.c
        sources/ft_string/str_create.c
        sources/ft_string/str_delarr.c
        sources/ft_string/str_delete.c
        sources/ft_string/str_duplicate.c
        sources/ft_string/str_fixlen.c
        sources/ft_string/str_get.c
        sources/ft_string/str_insert.c
        sources/ft_string/str_ncopy.c
        sources/ft_string/str_remove.c
        sources/ft_string/str_split.c
        sources/ft_string/str_substring.c
        sources/ft_string/str_zero.c
        sources/ft_vector/vec_addback.c
        sources/ft_vector/vec_addfront.c
        sources/ft_vector/vec_create.c
        sources/ft_vector/vec_delete.c
        sources/ft_vector/vec_duplicate.c
        sources/ft_vector/vec_get.c
        sources/ft_vector/vec_zero.c
        sources/list/ft_lstadd.c
        sources/list/ft_lstaddback.c
        sources/list/ft_lstdel.c
        sources/list/ft_lstdelone.c
        sources/list/ft_lstiter.c
        sources/list/ft_lstmap.c
        sources/list/ft_lstnew.c
        sources/list/ft_lstsize.c
        sources/memory/ft_bzero.c
        sources/memory/ft_free_double_ptr_arr.c
        sources/memory/ft_memalloc.c
        sources/memory/ft_memcat.c
        sources/memory/ft_memccpy.c
        sources/memory/ft_memchr.c
        sources/memory/ft_memcmp.c
        sources/memory/ft_memcpy.c
        sources/memory/ft_memcpy_rev.c
        sources/memory/ft_memdel.c
        sources/memory/ft_memmove.c
        sources/memory/ft_memset.c
        sources/memory/ft_realloc.c
        sources/memory/ft_swap.c
        sources/memory/ft_xmalloc.c
        sources/output/ft_putchar.c
        sources/output/ft_putchar_fd.c
        sources/output/ft_putendl.c
        sources/output/ft_putendl_fd.c
        sources/output/ft_putendl_nb.c
        sources/output/ft_putnbr.c
        sources/output/ft_putnbr_fd.c
        sources/output/ft_putstr.c
        sources/output/ft_putstr_bf.c
        sources/output/ft_putstr_fd.c
        sources/output/ft_putstr_nb.c
        sources/string/ft_atoi.c
        sources/string/ft_atoi_octal.c
        sources/string/ft_isalnum.c
        sources/string/ft_isalpha.c
        sources/string/ft_isascii.c
        sources/string/ft_isdigit.c
        sources/string/ft_isprint.c
        sources/string/ft_isspace.c
        sources/string/ft_itoa.c
        sources/string/ft_itoa_base.c
        sources/string/ft_llitoa.c
        sources/string/ft_sort_str_array.c
        sources/string/ft_strcat.c
        sources/string/ft_strchr.c
        sources/string/ft_strclr.c
        sources/string/ft_strcmp.c
        sources/string/ft_strcpy.c
        sources/string/ft_strcstr.c
        sources/string/ft_strdel.c
        sources/string/ft_strdup.c
        sources/string/ft_strequ.c
        sources/string/ft_striter.c
        sources/string/ft_striteri.c
        sources/string/ft_strjoin.c
        sources/string/ft_strlcat.c
        sources/string/ft_strlen.c
        sources/string/ft_strmap.c
        sources/string/ft_strmapi.c
        sources/string/ft_strncat.c
        sources/string/ft_strncmp.c
        sources/string/ft_strncpy.c
        sources/string/ft_strndup.c
        sources/string/ft_strnequ.c
        sources/string/ft_strnew.c
        sources/string/ft_strnstr.c
        sources/string/ft_strrchr.c
        sources/string/ft_strrejoin.c
        sources/string/ft_strsplit.c
        sources/string/ft_strstr.c
        sources/string/ft_strsub.c
        sources/string/ft_strtrim.c
        sources/string/ft_tolower.c
        sources/string/ft_toupper.c
        sources/xfuncs/ft_xstrdup.c
        sources/xfuncs/ft_xstrjoin.c
        sources/xfuncs/str_xfuncs1.c
        sources/xfuncs/str_xfuncs2.c
        sources/xfuncs/vec_xfuncs.c
        sources/xfuncs/xmalloc.c
        sources/ft_arr_str_qsort.c
        sources/ft_qsort.c
        sources/get_next_line.c
        )

add_library(${PROJECT_NAME} ${LIBFT_HEADERS} ${LIBFT_SRCS})

target_include_directories(${PROJECT_NAME} PUBLIC includes)
